Changed to LDAP and SMTP and removed Simian Army
- Changed authentication to use LDAP
- Send emails using SMTP instead of AWS SES
- Removed Simian Army Docker janitor
- Moved MongoDB from mlab to local
- Set up config file
- Refactoring

--- a/src/app/efs/efs.component.html
+++ b/src/app/efs/efs.component.html
@@ -17,7 +17,7 @@
   <div class="text-center" *ngIf="loading">
     <i class="fas fa-spinner fa-pulse fa-2x"></i>
   </div>
-  <ng-container *ngIf="!loading">
+  <div *ngIf="!loading" class="table-responsive">
     <table id="EFSTable" class="table">
       <thead>
         <tr>
@@ -49,5 +49,5 @@
       </tbody>
     </table>
     <span *ngIf="!efsInstances[0]">There are no EFS instances running.</span>
-  </ng-container>
+  </div>
 </section>
