--- a/src/app/ec2/ec2.component.html
+++ b/src/app/ec2/ec2.component.html
@@ -17,7 +17,7 @@
   <div class="text-center" *ngIf="loading">
     <i class="fas fa-spinner fa-pulse fa-2x"></i>
   </div>
-  <ng-container *ngIf="!loading">
+  <div *ngIf="!loading" class="table-responsive">
     <table id="EC2Table" class="table">
       <thead>
         <tr>
@@ -59,5 +59,5 @@
       </tbody>
     </table>
     <span *ngIf="!ec2Instances[0]">There are no EC2 instances running.</span>
-  </ng-container>
+  </div>
 </section>
