--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,40 +2,16 @@
   <li class="nav-item">
     <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">PROFILE</a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" id="register-tab" data-toggle="tab" href="#register" role="tab" aria-controls="register" aria-selected="false">REGISTER NEW USER</a>
-  </li>
 </ul>
 <section>
   <div class="tab-content" id="tabContent">
     <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
       <div class="form-group row">
-        <label class="col-1 col-form-label font-weight-bold">Username</label>
-        <div class="col-4">
-          <input class="form-control-plaintext" type="text" readonly value="{{ userProfile?.username }}">
+        <label class="col-lg-2 col-form-label font-weight-bold">Username</label>
+        <div class="col-lg-4">
+          <input class="form-control-plaintext" type="text" readonly value="{{ userProfile?.uid }}">
         </div>
       </div>
-      <div class="form-group row">
-        <label class="col-1 col-form-label font-weight-bold">Email</label>
-        <div class="col-4">
-          <input class="form-control-plaintext" type="text" readonly value="{{ userProfile?.email }}">
-        </div>
-      </div>
-      <div class="form-group row">
-        <label class="col-1 col-form-label font-weight-bold">First Name</label>
-        <div class="col-4">
-          <input class="form-control-plaintext" type="text" readonly value="{{ userProfile?.firstName }}">
-        </div>
-      </div>
-      <div class="form-group row">
-        <label class="col-1 col-form-label font-weight-bold">Last Name</label>
-        <div class="col-4">
-          <input class="form-control-plaintext" type="text" readonly value="{{ userProfile?.lastName }}">
-        </div>
-      </div>
-    </div>
-    <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
-      <app-register></app-register>
     </div>
   </div>
 </section>
